[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["eoqrid"]

[project]
name = "eoqrid"
dynamic = ["version"]
description = "Exchange-Only Quantum Computation Simulator"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT License"}
authors = [
	{name = "Sam.N"}
]
classifiers = [
	    "Developmant Status :: 3 - Alpha",
	    "Programming Language :: Python",
	    "Programming Language :: Python :: 3.12",
]
dependencies = [
	     "numpy",
	     "networkx",
	     "matplotlib",
	     "pylatexenc",
	     "qiskit",
	     "qiskit-aer",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.ruff.lint]
per-file-ignores = {"__init__.py" = ["F401"]}

[tool.setuptools.dynamic]
version = {attr = "eoqrid.__version__"}
