[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["eoqrid"]

[project]
name = "eoqrid"
dynamic = ["version"]
description = "Exchange-Only Quantum Computation Simulator"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT License"}
authors = [
	{name = "Sam.N"}
]
classifiers = [
	    "Developmant Status :: 3 - Alpha",
	    "Programming Language :: Python",
	    "Programming Language :: Python :: 3.12",
]
dependencies = [
	     "numpy>=2.4.4",
	     "networkx>=3.6.1",
	     "matplotlib>=3.10.9",
	     "pylatexenc>=2.10",
	     "qiskit>=2.4.1",
	     "qiskit-aer>=0.17.2",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.ruff.lint]
per-file-ignores = {"__init__.py" = ["F401"]}

[tool.setuptools.dynamic]
version = {attr = "eoqrid.__version__"}
